# MPPI_advanced_python_project

./: .coverage  .dockerignore  .gitignore  CMakeLists.txt  README.md  build_cpp.py  requirements.txt  setup.py
docker/: Dockerfile
notebooks/: experiment_1766577675.pkl  main.ipynb
src/: combined_config.py
src/controller/: __init__.py  config.py  mppi_controller.py
src/model/: __init__.py  pendulum_model.cpp  pendulum_model.py
src/mppi/: __init__.py  base.py
src/mppi/cpp/: __init__.py  bindings.cpp  mppi_cpp.cpp  mppi_cpp.h
src/mppi/jax/: __init__.py  mppi_jax.py
src/mppi/numpy/: __init__.py  mppi_numpy.py
src/utils/: __init__.py  metrics.py  results_collector.py
src/visualization/: __init__.py  animate.py  plots.py
tests/: __init__.py  conftest.py  test_base.py  test_config.py  test_controller.py  test_imports.py  test_integration.py  test_jax_implementation.py  test_metrics.py  test_numpy_implementation.py  test_utils.py  test_visualization.py
